Extend GenericRunner to produce BuildInfo (#79)
The build-agent can now route build-info build processes to
a downstream octopus-deploy server.